--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.6",
     "@rainbow-me/rainbowkit": "^0.12.1",
+    "@tanstack/react-table": "^8.15.3",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
