--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@wagmi/core": "^2.10.4",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
     "ethers": "5.7.2",
@@ -31,7 +32,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "viem": "^2.13.1"
   },
   "devDependencies": {
     "prettier": "^2.8.3"
